# carter-ai

./: .gitignore  README.md  pyproject.toml
notebooks/: llm_eda.ipynb  tts_eda.ipynb
scripts/: example_chat_completion.py  example_pair_programming.py  example_text_completion.py
