[tool.poetry]
name = "carter-ai"
version = "0.0.1"
description = "Your AI Coach Carter for Technical Interviews"
authors = ["Jae Ro <test@test.com>"]
readme = "README.md"
packages = [{include = "carter_ai", from = "src"}]
license = "MIT"
homepage = "https://github.com/Jae-Ro/carter-ai"
repository = "https://github.com/Jae-Ro/carter-ai"
documentation = "https://github.com/Jae-Ro/carter-ai/docs"
keywords = [
    "LLM", 
    "Large Language Model", 
    "Agentic AI", 
    "Generative AI", 
    "Assistant", 
    "Technical Interview"
]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
python_dotenv = "^1.0.1"

# Llama dependencies
llama_models = ">=0.0.49"
PyYAML = "^6.0.2"
jinja2 = "*"
tiktoken = ">=0.8.0"
pydantic = "^2.9.2"
Pillow = "*"
torch = "^2.5.1"
fairscale = ">=0.4.13"
fire = ">=0.7.0"
# hugging face
transformers = "^4.46.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
llama_stack = ">=0.0.49"
jupyterlab = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"